# alloy

./: .dockerignore  .gitignore  .justfile  .vampus.yml  AGENTS.md  CHANGELOG.md  Dockerfile  GIT_FLOW.md  PLAN.md  README.md  alloy.container  alloy.container.example  todo.md
backend/: Cargo.toml  config.toml
backend/src/: admin.rs  auth.rs  config.rs  containers.rs  db.rs  events.rs  images.rs  main.rs  models.rs  notifications.rs  persistence.rs  stacks.rs  state.rs  stats.rs  terminal.rs  updates.rs  workers.rs
backend/src/updates/: common.rs  digest.rs  handlers.rs  history.rs  mod.rs
backend/src/workers/: alerts.rs  auto_update.rs  mod.rs  scheduler.rs  state.rs
docs/superpowers/plans/: 2026-07-11-config-page-overhaul.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: AlertsPage.tsx  App.tsx  CheckConfigPage.tsx  ErrorBoundary.test.tsx  HealthChecksPage.tsx  HistoryPage.tsx  LoginScreen.test.tsx  NotifToast.test.tsx  SchedulePage.tsx  StacksPage.tsx  TerminalPage.tsx  api.test.ts  api.ts  main.tsx  types.ts  useSSE.ts
frontend/src/components/: BatchProgress.tsx  ConfigPage.tsx  ContainerActions.tsx  ContainerRow.tsx  ContainerTable.tsx  DashboardPage.tsx  ErrorBoundary.tsx  ImagesPage.tsx  InspectModal.tsx  LoginScreen.tsx  LogsModal.tsx  LogsPage.tsx  NetworksPage.tsx  NotifToast.tsx  PolicyActionButton.tsx  StacksPage.tsx  StatsPage.tsx  SummaryDialog.tsx  VolumesPage.tsx
