[package]
name = "alloy"
version = "0.4.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "auth", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bollard = "0.18"
futures = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
cookie = "0.18"
base64 = "0.22.1"
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
cron = "0.15"

[dev-dependencies]
tempfile = "3"
